# AriAstroTools

./: .buildinfo  .gitignore  README.md  api.html  ariastro.html  flowchart.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/workflows/: deploy-docs.yaml
_modules/: index.html
_modules/ariastrotools/: instrument.html  operations.html  utils.html
_sources/: ariastro.rst.txt  flowchart.rst.txt  installation.rst.txt
_sources/source/: ariastro_main.rst.txt  operations.rst.txt  utils.rst.txt
docs/: api.rst  ariastro.rst  conf.py  index.rst  modules.rst  quickstart.rst
docs/source/: ariastro.rst  handle_frame.rst
source/: ariastro.html  ariastro_main.html  handle_frame.html  modules.html  operations.html  utils.html
src/ariastro/: ariastro_main.py  handle_frame.py  instrument.py  operations.py  spectral_utils.py
src/ariastrotools/: __init__.py  handle_frame.py  logger.py  main.py~  operations.py  setups.py  spectral_utils.py  utils.py
test/: test_handle_frame.py  test_operations.py
