[build-system]
requires = ["setuptools>=75.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AriAstro"
version = "0"
description = "Package to combine fits files."
readme = "README.md"
requires-python = ">=3.0"
license = {text = "MIT"}
authors = [
    { name = "Varghese Reji", email = "varghesereji0007@gmail.com" }
]
dependencies = [
    "requests>=2.28.0",
    "numpy>=1.21",
    "pyfiglet",
    "colorama",
    "specutils",
    "astroscrappy"
]
keywords = ["example", "package"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/varghesereji/AriAstro"
"Repository" = "https://github.com/varghesereji/AriAstro"

[project.scripts]
ariastro = "ariastro.ariastro_main:main"
